# protectphp-ffi

./: .editorconfig  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  composer.json  phpstan.neon  phpunit.xml  rust-toolchain.toml
.github/workflows/: development.yml
crates/protect-ffi/: Cargo.toml
crates/protect-ffi/src/: encrypt_config.rs  lib.rs  plaintext_target.rs  safe_ffi.rs
include/: protectphp.h
src/: Client.php  Loader.php
src/Exceptions/: FFIException.php  LoaderException.php
tests/: bootstrap.php
tests/Integration/: ClientTest.php
tests/Unit/: ClientTest.php  LoaderTest.php
tests/Unit/Exceptions/: FFIExceptionTest.php  LoaderExceptionTest.php
workflows/: development.yml
